Refactor reservation locking and add Lombok dependency
Refactored distributed lock facades and controller to improve reservation handling and return values. Added Lombok to dependencies and adjusted related code. Updated tests and imports to match new method signatures and structure.

Delete test_result.txt